[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
environment = { SYSTEM_VERSION_COMPAT="0" }
test-requires = ["pytest"]
test-command = "pytest {project}/tests/"
test-skip = "*universal2:arm64"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
inherit.before-all = "prepend"
before-all = [
  "apk add build-base cmake ninja zip unzip curl git",
]

[[tool.mypy.overrides]]
module = "_squirrel.*"
ignore_missing_imports = true
